packages/kyvernoPolicies/chart/tests/vpol/restrict-apparmor-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-apparmor-cel
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-apparmor-cel
  resources:
  - badpod-annotation-unconfined
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-apparmor-cel
  resources:
  - goodpod-no-apparmor
  - goodpod-annotation-runtime-default
  - goodpod-annotation-localhost
  result: pass
